--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,18 @@
                 </p>
             </section>
 
+            <section class="mx-4">
+                <p class="mt-10 text-2xl font-semibold text-center"><u>Work of quiztimer</u></p>
+                <p class="mt-4"><span class="text-xl font-semibold">Ans : </span> The time of the quiz is being counted through the quizTimer function. If the user gives ans within 60 sec, the timer is green, but after 60 sec, the timer turns red. By which it is understood that the user has exceeded the specified time.
+                </p>
+            </section>
+
+            <section class="mx-4">
+                <p class="mt-10 text-2xl font-semibold text-center"><u>Work of chooseQuiz </u></p>
+                <p class="mt-4"><span class="text-xl font-semibold">Ans : </span> chooseQuiz is an onclick function. This function is called in displayQuizOptions so that the user can choose an option as his ans by clicking on the options of the question.
+                </p>
+            </section>
+
         
     </main>
 
