final commit for every other thing

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header class="flex space-between mx-12 bg-sky-200 px-10 mt-4 rounded-sm">
-            <a href="geometry.html"><button class="bg-blue-600 my-3 py-1 px-6 ml-80 rounded-lg">Home</button></a>
+            <a href="index.html"><button class="bg-blue-600 my-3 py-1 px-6 ml-80 rounded-lg">Home</button></a>
         </header> 
     
         <main>
